--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "settings": {
+      "config": {
         "outputDirectory": "dist"
       }
     }
