--- a/vercel.json
+++ b/vercel.json
@@ -20,11 +20,11 @@
     },
     {
       "src": "/(.*\\.(js|css|svg|png|jpg|ico))",
-      "dest": "/$1"
+      "dest": "frontend/dist/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "frontend/dist/index.html"
     }
   ]
 }
