--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "nodemailer": "^7.0.10",
     "puppeteer": "^24.30.0"
+  },
+  "dependencies": {
+    "form-data": "^4.0.4"
   }
 }
