--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -23,48 +23,12 @@ jobs:
       - name: 3. Instalar dependências
         run: |
           npm ci
-          npm install axios puppeteer  # <--- ADICIONEI ESSA LINHA AQUI
+          npm install axios puppeteer
 
-      - name: 4. Instalar libs do sistema (Ubuntu 24.04)
+      - name: 4. Instalar libs do sistema (Ubuntu 24.04 Fix)
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-          libasound2t64 \
-          libatk-bridge2.0-0 \
-          libatk1.0-0 \
-          libc6 \
-          libcairo2 \
-          libcups2 \
-          libdbus-1-3 \
-          libexpat1 \
-          libfontconfig1 \
-          libgbm1 \
-          libgcc1 \
-          libglib2.0-0 \
-          libgtk-3-0 \
-          libnspr4 \
-          libnss3 \
-          libpango-1.0-0 \
-          libpangocairo-1.0-0 \
-          libstdc++6 \
-          libx11-6 \
-          libx11-xcb1 \
-          libxcb1 \
-          libxcomposite1 \
-          libxcursor1 \
-          libxdamage1 \
-          libxext6 \
-          libxfixes3 \
-          libxi6 \
-          libxrandr2 \
-          libxrender1 \
-          libxss1 \
-          libxtst6 \
-          ca-certificates \
-          fonts-liberation \
-          lsb-release \
-          xdg-utils \
-          wget
+          sudo apt-get install -y libasound2t64 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation lsb-release xdg-utils wget
 
       - name: 5. Rodar o script
         run: node .github/scripts/sendReport.js
